# fina

./: .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml
fina/core/: __init__.py  _database.py  _dimensions.py  _entities.py
test/core/: test_aggregate_transaction.py  test_balance.py  test_entities.py  test_transaction.py
