[tool.poetry]
name = "fina-core"
version = "0.1.0"
description = ""
authors = ["arturhgca <contact@arturcoutinho.com>"]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.14.9"
click = "^8.0.4"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
